<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.f17.csci5539.team5.ceitmajorselectionapp.MainMenuActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About Page"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="170dp"
            android:layout_margin="10dp"
            android:background="@drawable/it_walkway" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="General:"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/about_general_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_general"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="\nGuide:"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_guide"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="\nClients:"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/about_clients_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_clients"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Development team:"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/about_dev_team_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_dev_team"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Copyright:"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#FFFFFF" />

        <TextView
            android:id="@+id/about_copyright_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright"
            android:textSize="14sp" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/back" />

    </LinearLayout>
</ScrollView>