<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="com.f17.csci5539.team5.ceitmajorselectionapp.MainMenuActivity">

        <TextView
            android:id="@+id/welcome_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome:---"
            android:textColor="@android:color/white"
            android:textSize="40dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <ImageView
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:src="@drawable/pexels_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CEIT_welcome"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\nSelect an option below:"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CEIT_discover"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/quiz_icon" />

            <Button
                android:id="@+id/discover_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_layout_style"
                android:text="Discover" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CEIT_explore"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/explore_icon" />

            <Button
                android:id="@+id/major_info_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button_layout_style"
                android:text="Explore Majors" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>